--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
@@ -19,9 +20,6 @@
         android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".activity.RegisterActivity"></activity>
         <activity android:name=".activity.LoginActivity" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
         <activity android:name=".activity.IntroductionActivity" />
         <activity android:name=".activity.WelcomeActivity">
             <intent-filter>
